syntax = "proto3";
package badgerRaft;
option go_package = "github.com/ronaksoft/rony/internal/store/badgerRaft";

// StoreCommandType
enum CommandType {
    CTStartTxn = 0;
    CTStopTxn = 1;
    CTCommitTxn = 2;
    CTSet = 3;
    CTDelete = 4;
    CTGet = 5;
}

// RaftCommand
message StoreCommand {
    CommandType Type = 1;
    bytes Payload = 2;
}

message KeyValue {
    bytes Key = 1;
    bytes Value = 2;
}

message StartTxn {
    int64 ID = 1;
    bool Update = 2;
}

message StopTxn {
    int64 ID = 1;
    bool Commit = 2;
}

message CommitTxn {
    int64 ID = 1;
}

message Set {
    int64 TxnID = 1;
    KeyValue KV = 2;
}

message Delete {
    int64 TxnID = 1;
    bytes Key = 2;
}

message Get {
    int64 TxnID = 1;
    bytes Key = 2;
}